2004-02-23  Larry Jones  <lawrence.jones@ugsplm.com>

	* sanity.sh (taginfo-examine-1): Correct expected results.

2004-02-20  Derek Price  <derek@ximbiot.com>

	* subr.c (expand_string): Use x2realloc() from GNULIB for core
	functionality.

2004-02-20  Derek Price  <derek@ximbiot.com>

	* subr.c (set_nonblock_fd): Move back to...
	* server.c: ...here.
	* cvs.h: Remove protos for the above two functions.
	* buffer.c (stdio_buffer_shutdown): Remove unexessary and possibly
	dangerous check for unread data on a pipe with a nonblock read.

2004-02-20  Larry Jones  <lawrence.jones@ugsplm.com>

	* tag.c (check_fileproc): Remove unused variable.

2004-02-20  Derek Price  <derek@ximbiot.com>

	* ChangeLog, commit.c, filesubr.c, rcs.c, root.c, sanity.sh, subr.c,
	update.c: Remove VIM editor commands.

2004-02-20  Derek Price  <derek@ximbiot.com>

	Import xalloc module from GNULIB, as well as its remaining unimported
	dependency, the exitfail module.

	* cvs.h: #include "xalloc.h".
	* subr.c (xmalloc, xrealloc, xstrdup): Remove these functions.

2004-02-20  Larry Jones  <lawrence.jones@ugsplm.com>

	* hash.h (struct node): Change data from char * to void *, change
	all callers.

	* run.c (cmdlinequote, cmdlineescape): Use prototype in definition
	to match cvs.h.
	(format_cmdline): UNIQUE_*_TYPE_* macros imply HAVE_*, so no need
	to check for both.  Remove duplicate code for size_t and ptrdiff_t.

	* tag.c (check_fileproc): Remove spurious invalid cast, clean up
	coding style.

	* commit.c (precommit_list_proc): Remove vestigial prototype.

2004-02-19  Derek Price  <derek@ximbiot.com>

	* run.c (format_cmdline): Don't accept printf `L' modifier at all when
	long doubles are not available.  Allow UNIQUE_FLOAT_TYPE_LONG_DOUBLE to
	imply HAVE_LONG_DOUBLE.
	
2004-02-19  Derek Price  <derek@ximbiot.com>

	* run.c: Remove include of stddef.h - it is already included via
	lib/system.h.

2004-02-19  Larry Jones  <lawrence.jones@ugsplm.com>
