@@ -1,3 +1,7 @@
+2004-02-24  Derek Price  <derek@ximbiot.com>
+
+	* sanity.sh (taginfo-newfmt-examine-2): Correct expected results.
+
 2004-02-23  Larry Jones  <lawrence.jones@ugsplm.com>
 
 	* sanity.sh (taginfo-examine-1): Correct expected results.
